nullaway_error_95921D06-C8FF-4C19-9827-462A70099D2D.txt
/Users/nima/Developer/null-repair-auto/projects/spring-framework/spring-context/src/main/java/org/springframework/context/annotation/ConfigurationClassPostProcessor.java:670: error: [NullAway] assigning @Nullable expression to @NonNull field
			this.descriptors = descriptors;
			                 ^
    (see http://t.uber.com/nullaway )
